--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 <body>
     <div class="main-container">
         <header>
-            <div class="navbar">
-                <div class="logo">
-                    <img alt="logo" src="./images/logo/Booki.png">
+            <nav>
+                <div class="navbar">
+                    <div class="logo">
+                        <img alt="logo" src="./images/logo/Booki.png">
+                    </div>
+                    <ul>
+                        <li><a href="#hebergements-location" id="current-page">Hébergements</a></li>
+                        <li><a href="#activities-location">Activités</a></li>
+                    </ul>
                 </div>
-                <ul>
-                    <li><a href="#hebergements-location" id="current-page">Hébergements</a></li>
-                    <li><a href="#activities-location">Activités</a></li>
-                </ul>
-            </div>
+            </nav>
             <div class="title-header">
                 <h1 class="titles">Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre-ville ou en pleine nature</p>
@@ -70,7 +72,7 @@
                             <a href="#">
                                 <article class="card">
                                     <img src="./images/hebergements/fred-kleber.jpg"
-                                        alt="Image de la chambre d'hôtel montrant un lit">
+                                        alt="Image de la chambre d'hôtel montrant deux lits simples">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="cards-titles">Hôtel du port</h3>
@@ -90,7 +92,7 @@
                             <a href="#">
                                 <article class="card">
                                     <img src="./images/hebergements/febrian-zakaria.jpg"
-                                        alt="Image de la chambre d'hôtel montrant un lit">
+                                        alt="Image de la chambre d'hôtel montrant un lit et un bureau">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="cards-titles">Hôtel Chez Amina</h3>
@@ -110,7 +112,7 @@
                             <a href="#">
                                 <article class="card">
                                     <img src="./images/hebergements/reisetopia.jpg"
-                                        alt="Image de la chambre d'hôtel montrant un lit">
+                                        alt="Image de la chambre d'hôtel montrant un lit et une armoire">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="cards-titles">Hôtel les mouettes</h3>
@@ -132,7 +134,7 @@
                             <a href="#">
                                 <article class="card">
                                     <img src="./images/hebergements/annie-spratt.jpg"
-                                        alt="Image de la chambre d'hôtel montrant un lit">
+                                        alt="Image de la chambre d'hôtel montrant un lit double">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="cards-titles">Hôtel de la mer</h3>
@@ -152,7 +154,7 @@
                             <a href="#">
                                 <article class="card">
                                     <img src="./images/hebergements/marcus-loke.jpg"
-                                        alt="Image de la chambre d'hôtel montrant un lit">
+                                        alt="Image de la chambre d'hôtel montrant un lit superposé et une fenêtre vue extérieure">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="cards-titles">Auberge La Canebière</h3>
@@ -172,7 +174,7 @@
                             <a href="#">
                                 <article class="card">
                                     <img src="./images/hebergements/nicate-lee.jpg"
-                                        alt="Image de la chambre d'hôtel montrant un lit">
+                                        alt="photo montrant deux lits superposés ">
                                     <div class="card-content">
                                         <div class="card-txt">
                                             <h3 class="cards-titles">Auberge Le Panier</h3>
@@ -202,7 +204,7 @@
                         <a href="#">
                             <article class="card">
                                 <img src="./images/hebergements/emile-guillemot.jpg"
-                                    alt="Image de la chambre d'hôtel montrant un lit">
+                                    alt="Image de la chambre d'hôtel montrant un lit double et un miroir et une fenêtre">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="cards-titles">Hôtel Le soleil du matin</h3>
@@ -222,7 +224,7 @@
                         <a href="#">
                             <article class="card">
                                 <img src="./images/hebergements/aw-creative.jpg"
-                                    alt="Image de la chambre d'hôtel montrant un lit">
+                                    alt="Image de la chambre d'hôtel montrant un lit double">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="cards-titles">Chambres d’hôtes Au cœur de l’eau</h3>
@@ -242,7 +244,7 @@
                         <a href="#">
                             <article class="card">
                                 <img src="./images/hebergements/febrian-zakaria2.jpg"
-                                    alt="Image de la chambre d'hôtel montrant un lit">
+                                    alt="Image de la chambre d'hôtel montrant un lit double">
                                 <div class="card-content">
                                     <div class="card-txt">
                                         <h3 class="cards-titles">Hôtel Bleu et Blanc</h3>
@@ -267,7 +269,7 @@
                 <div class="activities-cards">
                     <a href="#">
                         <article class="long-card">
-                            <img src="./images/activites/reno-laithienne.jpg" alt="Image d'un paysage'">
+                            <img src="./images/activites/reno-laithienne.jpg" alt="Image d'un port'">
                             <div class="long-card-content">
                                 <h3 class="long-cards-titles">Vieux-Port</h3>
                             </div>
@@ -275,7 +277,7 @@
                     </a>
                     <a href="#">
                         <article class="long-card">
-                            <img src="./images/activites/paul-hermann.jpg" alt="Image d'un paysage'">
+                            <img src="./images/activites/paul-hermann.jpg" alt="Image d'un Fort'">
                             <div class="long-card-content">
                                 <h3 class="long-cards-titles">Fort de Pomègues</h3>
                             </div>
@@ -291,7 +293,7 @@
                     </a>
                     <a href="#">
                         <article class="long-card">
-                            <img src="./images/activites/florian-wehde.jpg" alt="Image d'un paysage'">
+                            <img src="./images/activites/florian-wehde.jpg" alt="Image d'un monument'">
                             <div class="long-card-content">
                                 <h3 class="long-cards-titles">Notre-Dame-de-la-Garde</h3>
                             </div>
