--- a/index.html
+++ b/index.html
@@ -18,15 +18,11 @@
     <div class="main-container">
         <header>
             <nav>
-                <div class="navbar">
-                    <div class="logo">
-                        <img alt="logo" src="./images/logo/Booki.png">
-                    </div>
-                    <ul>
-                        <li><a href="#hebergements-location" id="current-page">Hébergements</a></li>
-                        <li><a href="#activities-location">Activités</a></li>
-                    </ul>
-                </div>
+                <img alt="logo" id="#logo" src="./images/logo/Booki.png">
+                <ul>
+                    <li><a href="#hebergements-location" id="current-page">Hébergements</a></li>
+                    <li><a href="#activities-location" id="other-page">Activités</a></li>
+                </ul>
             </nav>
             <div class="title-header">
                 <h1 class="titles">Trouvez votre hébergement pour des vacances de rêve</h1>
